--- a/blogicum/templates/includes/header.html
+++ b/blogicum/templates/includes/header.html
@@ -25,7 +25,7 @@
               <button type="button" class="btn btn-outline-primary"><a class="text-decoration-none text-reset"
                   href="{% url 'blog:profile' user.username %}">{{ user.username }}</a></button>
               <form method="post" action="{% url 'logout' %}" class="d-inline">
-                <!-- {% csrf_token %} --> 
+                {% csrf_token %}
                 <button type="submit" class="btn btn-outline-primary">Выйти</button>
               </form>
             </div>
